# GameEngine

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt  start.h
engine/src/: engine.cpp
sandbox/: CMakeLists.txt  sandbox.cpp
